<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.ranjithsappportfolio.MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/Title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            style="@style/ButtonTheme"
            android:onClick="popularMovies"
            android:text="@string/App1" />

        <Button
            style="@style/ButtonTheme"
            android:onClick="stockHawk"
            android:text="@string/App2" />

        <Button
            style="@style/ButtonTheme"
            android:onClick="buildItBigger"
            android:text="@string/App3" />

        <Button
            style="@style/ButtonTheme"
            android:onClick="makeYourAppMaterial"
            android:text="@string/App4" />

        <Button
            style="@style/ButtonTheme"
            android:onClick="goUbiquitous"
            android:text="@string/App5" />

        <Button
            style="@style/ButtonTheme"
            android:onClick="capstone"
            android:text="@string/App6" />

    </LinearLayout>
</RelativeLayout>
